Fix driver order, overflow

--- a/public/src/css/driver.scss
+++ b/public/src/css/driver.scss
@@ -1,8 +1,11 @@
 .driverMain{
     display: flex;
     flex-direction: row;
+    overflow: hidden;
 }
 .orderList{
     width: 30vw;
     padding: 20px;
+    height: calc(100vh - 45px);
+    overflow-y: scroll;
 }
